--- a/sass/components/_portofolio.scss
+++ b/sass/components/_portofolio.scss
@@ -1,18 +1,10 @@
 .portofolio {
-    &-section {
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 94px;
-    }
-}
-
-.grid {
     display: flex;
-    gap: 30px;
+    flex-direction: column;
+    padding-bottom: 94px;
 }
 
-.grid {
-    &-projects {
+.grid-projects {
         list-style: none;
         border-radius: 4px;
         cursor: pointer;
@@ -21,8 +13,10 @@
         gap: 8px;
         height: 38px;
         padding-bottom: 50px;
-    }
-    &-button {
+}
+
+.grid-projects {
+    &__button {
         height: 38px;
         background: #F5F4FA;
         border-radius: 4px;
@@ -36,7 +30,7 @@
         border: none;
         padding: 6px 22px 6px 22px;
     }
-    &-button:hover {
+    &__button:hover {
         color: #2196F3;
         cursor: pointer;
         border: none;
@@ -48,30 +42,35 @@
         border-radius: 4px;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &-portofolio {
+}
+
+.grid-portofolio {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
         gap: 30px;
-    }
-    &-portofolio > li {
-        border: 1px solid #EEEEEE;
-    }
-    &__card-portofolio {
+}
+
+.grid-portofolio > li {
+    border: 1px solid #EEEEEE;
+}
+
+.grid-portofolio {
+    &__card {
         flex-basis: 370px;
         height: 404px;
     }
-    &__card-portofolio:hover {
+    &__card:hover {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
         cursor: pointer;
     }
-    &__card-portofolio > h3 {
+    &__card > h3 {
         padding: 20px 0px 4px 24px;
     }
-    &__card-portofolio > p {
+    &__card > p {
         padding-left: 24px;
     }
-    &__card-portofolio-upper {
+    &__card-upper {
         position: relative;
         overflow: hidden;
         width: 370px;
@@ -79,7 +78,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-    &__card-portofolio-upper:hover .grid__overlay {
+    &__card-upper:hover .grid-portofolio__overlay {
         transform: translateY(0px);
     }
     &__overlay {
@@ -98,14 +97,14 @@
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 63px 24px 91px 24px;
     }
-    &__image-portofolio {
+    &__image {
         width: 370px; 
         height: 294px;
     }
-    &__card-portofolio-lower {
+    &__card-lower {
         padding: 20px 24px;
     }
-    &-title {
+    &__title {
         font-weight: 700;
         font-size: 14px;
         line-height: 16px;
@@ -114,7 +113,7 @@
         color: #212121;
         padding-bottom: 4px;
     }
-    &-description {
+    &__description {
         font-weight: 400;
         font-size: 14px;
         line-height: 24px;
