--- a/sass/components/_section-two.scss
+++ b/sass/components/_section-two.scss
@@ -1,18 +1,8 @@
-.section-two {
-
-}
-
-.our-qualities a {
-    background-color: #F5F4FA;
-    align-items: center;
-    height: 120px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
-.our-qualities {
-    &__title {
+.grid-items {
+    &__qualities {
+        width: 270px;
+    }
+    &__qualities-title {
         font-weight: 700;
         font-size: 14px;
         line-height: 16px;
@@ -21,7 +11,7 @@
         color: #212121;
         padding-bottom: 4px;
     }
-    &__description {
+    &__qualities-description {
         font-weight: 400;
         font-size: 14px;
         line-height: 24px;
@@ -29,4 +19,13 @@
         color: #757575;
         padding-bottom: 20px;
     }
+}
+
+.grid-items__qualities a {
+    background-color: #F5F4FA;
+    align-items: center;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
 }
