--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,22 +31,7 @@ li {
     text-align: center;
 }
 
-.social-media-icons {
+.grid {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 206px;
-    margin: 16px 32px 30px;
-}
-
-.page-link-a::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background: #2196f3;
-    border-radius: 2px;
-    top: 46px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    left: 0px;
+    gap: 30px
 }
