--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,15 +5,17 @@
     padding: 60px 0px
 }
 
-.footer {
-    &-navigation {
-        display: flex;
-    }
-    &-left {
+.footer__navigation {
+    display: flex;
+}
+
+.footer-left {
         display: flex;
         flex-direction: column;
-    }
-    &-WebStudio-info {
+}
+
+.footer-left {
+    &__WebStudio-info {
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
@@ -23,22 +25,22 @@
         color: #2196F3;
         text-decoration: none;
     }
-    &-adress-list {
+    &__adress-list {
         list-style: none;
         display: flex;
         flex-direction: column;
         padding-inline-start: 0px;
         padding-top: 28px;
     }
-    &-adress-list :hover {
+    &__adress-list :hover {
         color: #2196F3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &-adress {
+    &__adress {
         padding-bottom: 12px;
         width: 207px;
     }
-    &-adress-link {
+    &__adressLink {
         font-weight: 400;
         line-height: 16px;
         letter-spacing: 0.03em;
@@ -46,7 +48,7 @@
         text-decoration: none;
         font-style: normal;
     }
-    &-contact-link {
+    &__contactLink {
         font-weight: 400;
         line-height: 16px;
         letter-spacing: 0.03em;
@@ -73,24 +75,25 @@
     padding-bottom: 20px;
 }
 
-.footer {
-    &-right {
-        height: 80px;
-        padding-left: 94px;
-        display: flex;
-        flex-direction: column;
-        margin-block-start: 0px;
-        width: 206px;
-    }
-    &-social-media-icons-list {
+.footer-right {
+    height: 80px;
+    padding-left: 94px;
+    display: flex;
+    flex-direction: column;
+    margin-block-start: 0px;
+    width: 206px;
+}
+  
+.footer-right {
+    &__social-list {
         display: flex;
         justify-content: space-between;
         width: 206px;
     }
-    &-social-media-icons-list a:hover {
+    &__social-list a:hover {
         color: white;
     }
-    &-icon-list-item {
+    &__icons {
         height: 44px;
         width: 44px;
         background-color: rgba(255, 255, 255, 0.1);
@@ -100,20 +103,21 @@
         align-items: center;
         margin-bottom: 30px;
     }
-    &-icon-list-item > svg {
+    &__icons > svg {
         color: white;
     }
-    &-icon-list-item:hover {
+    &__icons:hover {
         background-color: #2196F3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 
-.footer {
-    &-form-position {
-        margin: 0px 0px 0px 93px;
-    }
-    &-form-position-title {
+.footer-form {
+    margin: 0px 0px 0px 93px;
+}
+
+.footer-form {
+    &__title {
         font-weight: 700;
         font-size: 14px;
         line-height: 16px;
@@ -122,10 +126,10 @@
         color: #FFFFFF;
         margin-bottom: 20px;
     }
-    &-form {
+    &__position {
         display: flex;
     }
-    &-email-text {
+    &__email-text {
         position: absolute;
         margin: 15px 0px 15px 16px;
         z-index: 2; 
@@ -137,7 +141,7 @@
         letter-spacing: 0.03em;
         color: rgba(255, 255, 255, 0.6);
     }
-    &-form-label > input {
+    &__label > input {
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
@@ -151,7 +155,10 @@
         padding-left: 71px;
         color: white;
     }
-    &-form-button {
+    &__label > input:focus {
+        outline: none;
+    }
+    &__button {
         width: 200px;
         height: 50px;
         background: #2196F3;
