--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,7 +6,7 @@
 }
 
 .header {
-    &-navigation {
+    &__navigation {
         background-color: white;
         font-weight: 500;
         line-height: 16px;
@@ -17,7 +17,7 @@
         align-items: center;
         border-bottom: 1px solid #ECECEC;
     }
-    &-WebStudio-info {
+    &__WebStudio-info {
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
@@ -28,88 +28,97 @@
         text-decoration: none;
         padding: 0 93px 0 0;
     }
-    &-nav-link {
+    &__navLink {
         display: flex;
         flex-grow: 1;
         align-items: center;
         justify-content: space-between;
     }
-    &-left {
-        display: flex;
-        align-items: center;
-        padding-inline-start: 0px;
-        padding: 32px 0px;
-    }
-    &-left > li {
-        padding-right: 30px;
-    }
-    &-left :hover {
-        color: #2196F3;
-        cursor: pointer;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+}
+
+.header-left {
+    display: flex;
+    align-items: center;
+    padding-inline-start: 0px;
+    padding: 32px 0px;
+}
+
+.header-left > li {
+    padding-right: 30px;
+}
+
+.header-left :hover {
+    color: #2196F3;
+    cursor: pointer;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #studio1 {
     color: black;
 }
  
-
-.page-link {
-    color: #212121;
-    text-decoration: none;
+.header-left {
+    &__pageLink {
+        color: #212121;
+        text-decoration: none;
+    }
+    &__pageLink-a {
+        position: relative;
+        color: #212121;
+        text-decoration: none;
+    }
+    &__pageLink-a::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background: #2196f3;
+        border-radius: 2px;
+        top: 46px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        left: 0px;
+    }
 }
 
-.page-link-a {
-    position: relative;
-    color: #212121;
-    text-decoration: none;
+.header-right {
+    color: #757575;
+    display: flex;
+    align-items: center;
+    padding-inline-start: 0px;
+    padding: 32px 0px;
 }
 
-.header {
-    &-right {
-        color: #757575;
+.header-right > li {
+    padding-right: 30px;
+}
+
+.header-right {
+    &__envelope {
         display: flex;
-        align-items: center;
-        padding-inline-start: 0px;
-        padding: 32px 0px;
     }
-    &-right > li {
-        padding-right: 30px;
-    }
-}
-
-.header {
-    &-right-envelope {
-        display: flex;
-    }
-    &-right-envelope svg:hover {
+    &__envelope svg:hover {
         fill: #2196F3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &-contact-link {
+    &__contactLink {
         color: #757575;
         text-decoration: none;
         padding-left: 10px;
     }
-    &-contact-link:hover {
+    &__contactLink:hover {
         color:#2196F3;
         cursor: pointer;
         border: none;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &-icons {
+    &__icons {
         padding-right: 10px;
     }
-}
-
-.header {
-    &-right-phone {
+    &__phone {
         display: flex;
     }
-    &-right-phone svg:hover {
+    &__phone svg:hover {
         fill: #2196F3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
 }
