--- a/sass/components/_section-five.scss
+++ b/sass/components/_section-five.scss
@@ -4,7 +4,7 @@
     align-items: center;
 }
 
-.section-five-title {
+.section-five__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -14,21 +14,21 @@
 }
 
 .grid {
-    &-customers {
+    &__customers {
         width: 170px;
         height: 92px;
         border: 1px solid #AFB1B8;
         border-radius: 4px;
-        margin: 50px 15px 94px 15px;
+        margin: 50px 0px 94px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    &-customers svg:hover {
+    &__customers svg:hover {
         fill: #2196f3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &-customers:hover {
+    &__customers:hover {
         border-color: #2196f3;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
