--- a/sass/components/_section-four.scss
+++ b/sass/components/_section-four.scss
@@ -3,11 +3,9 @@
     padding-bottom: 94px;
 }
 
-.section-four {
-    &-title {
-        padding-bottom: 50px;
-        color: #212121;
-    }
+.section-four__title {
+    padding-bottom: 50px;
+    color: #212121;   
 }
 
 .grid__card {
@@ -16,19 +14,21 @@
     border-radius: 0px 0px 4px 4px;
 }
 
-.our-team {
-    &__image {
+.our-team__image {
         padding-bottom: 30px;
-    }
-    &__details {
+}
+
+.our-team__details {
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-    &__title {
+}
+
+.our-team__details {
+    &-title {
         padding-bottom: 10px;
     }
-    &__ocupation {
+    &-ocupation {
         font-weight: 400;
         font-size: 16px;
         line-height: 19px;
@@ -37,22 +37,32 @@
     }
 }
 
-.social-media {
-    &__item {
-    height: 44px;
-    width: 44px;
-    background-color: #FFFFFF;
-    border-radius: 50%;
+
+.our-team__social-media {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-evenly;
+    width: 206px;
+    margin: 16px 32px 30px;
+}
+
+
+.our-team__social-media {
+    &-item {
+        height: 44px;
+        width: 44px;
+        background-color: #FFFFFF;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    &__item svg:hover {
-        fill: white;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &-item svg:hover {
+            fill: white;
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &__item:hover {
-        background-color: #2196F3;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &-item:hover {
+            background-color: #2196F3;
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
